--- a/class-00/lab-c/starter-code/styles/style.css
+++ b/class-00/lab-c/starter-code/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Abel|Oswald:700|Yellowtail|Patrick+Hand');
+/* @import url('https://fonts.googleapis.com/css?family=Abel|Oswald:700|Yellowtail|Patrick+Hand');
 
 * {
   font-family: times;
@@ -6,66 +6,66 @@
 
 body {
   background: #fff;
-}
+} */
 
-nav, article, aside, footer section {
+/* nav, article, aside, footer section {
   margin: 0 auto;
   width: 900px;
 }
 
 nav {
   margin-top: 25px;
-}
+} */
 
-#logo {
+/* #logo {
   float: left;
   padding-bottom: 25px;
   color: black;
   text-decoration: none;
-}
+} */
 
-#logo img {
+/* #logo img {
   float: left;
-}
+} */
 
-#logo h1 {
+/* #logo h1 {
   padding-left: 50px;
   font-family: 'Yellowtail', cursive;
   font-size: 2.4em;
-}
+} */
 
-#slogan {
+/* #slogan {
   width: 250px;
   padding-left: 55px;
   color: #a3a4a2;
   font-family: 'Abel', sans-serif;
   font-size: .65em;
   text-transform: uppercase;
-}
+} */
 
-nav ul {
+/* nav ul {
   float: right;
 }
 
 nav li {
   float: left;
   padding-right: 2px;
-}
+} */
 
-hr {
+/* hr {
   clear: both;
   border: 0;
   height: 13px;
   background-image: url('../img/hr.png');
-}
+} */
 
-h2 {
+/* h2 {
   margin-top: 50px;
   font-family: 'Oswald', sans-serif;
   font-size: 2.5em;
-}
+} */
 
-.print, .date {
+/* .print, .date {
   color: #a9a8a5;
   font-family: 'Abel', sans-serif;
   font-size: .8em;
@@ -73,9 +73,9 @@ h2 {
   text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 33px;
-}
+} */
 
-.date {
+/* .date {
   float: left;
 }
 
@@ -87,21 +87,21 @@ h2 {
 
 .print img {
   margin-right: 3px;
-}
+} */
 
-main p {
+/* main p {
   color: #333;
   font-size: 1.2em;
   line-height: 1.3em;
   text-indent: 30px;
   margin: 20px 0px;
-}
+} */
 
-input {
+/* input {
   font-family: 'Patrick Hand', cursive;
-}
+} */
 
-.recipe {
+/* .recipe {
   letter-spacing: .1em;
   font-family: 'Patrick Hand', cursive;
   color: #666a42;
@@ -109,9 +109,9 @@ input {
   height: 260px;
   padding: 37px 0 0 60px;
   margin: 40px 0;
-}
+} */
 
-.recipe li {
+/* .recipe li {
   float: left;
   width: 40%;
   font-size: 1.3em;
@@ -125,24 +125,24 @@ aside {
 
 aside img {
   float: left;
-}
+} */
 
-aside h3 {
+/* aside h3 {
   padding-left: 100px;
   font-size: 1.6em;
   padding-bottom: 10px;
   color: #555;
-}
+} */
 
-aside p {
+/* aside p {
   padding-left: 100px;
   width: 65%;
   margin: 0;
   text-indent: 0;
 
-}
+} */
 
-aside button {
+/* aside button {
   float: right;
   font-family: 'Abel', sans-serif;
   text-transform: uppercase;
@@ -151,20 +151,20 @@ aside button {
   color: #fff;
   font-size: 1.2em;
   border: none;
-}
+} */
 
-section hr {
+/* section hr {
   border-bottom: 1px solid #eee;
   height: 0;
-}
+} */
 
 
-footer section p{
+/* footer section p{
   padding: 50px 0;
   line-height: 1.5em;
   text-align: center;
   color: #aaa;
-}
+} */
 
 
-}
+/* } */
